
      \item \code{capabilities()} now reports if ICU is used for collation.

      % TODO: Port to 3.1.1 patched
      \item For consistency with \code{[dpqr]norm()}, and \code{[qr]lnorm()},
      \code{[dp]lnorm(sdlog=0)} also model a point mass at \code{exp(mulog)}.

      \item \code{prettyNum(x, zero.print=*)} now also works when
      \code{x} contains \code{NA}s.
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item When building \R as a shared library, the
      \option{-L${R_HOME}/lib${R_ARCH}} flag is placed earlier in the
      link commands used during installation and when packages are
      installed: this helps ensure that the current build has priority if
      an \R shared library has already been installed by e.g.
      \command{install-libR} in a library mentioned in \env{LDFLAGS}
      (and not in \sQuote{your system's library directory} as
      documented). (Wish of \PR{15790}.)

      \item LaTeX package \pkg{upquote} is no longer required for \R's
      use of \pkg{inconsolata}.

      \item The \code{\\donttest} sections of \R's help files can be
      tested by\cr
      \command{make check TEST_DONTTEST=TRUE}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item There is some support for testing the \code{\\dontrun} and
      \code{\\donttest} parts of examples in packages.

      \code{tools::testInstalledPackage()} accepts new arguments
      \code{commentDontrun = FALSE} and \code{commentDonttest = FALSE}.

      \command{R CMD check} gains \option{--run-dontrun} and
      \option{--run-donttest} options.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item New C API utility \code{logspace_sum(logx[], n)}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed two obscure bugs in pairlist subassignment, reported by
      Radford Neal as part of pqR issue 16.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.1.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{